Fix bug where header image covered nav links

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -99,6 +99,7 @@ header {
     bottom: 0;
     display: block;
     margin: auto;
+    pointer-events: none;
 }
 
 .main-nav {
